<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">deviceLogcat</string>
    <string name="all_log">抓取全部日志</string>
    <string name="myButton1">确定</string>
    <string name="myButton2">开启日志</string>
    <string name="myTextView">已输入的关键字</string>
    <string name="myEditText">请输入关键字</string>
    <string name="logText">显示日志</string>
    <string name="clearButton">重新抓取</string>
    <string name="saveButton">保存日志</string>


</resources>
