<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".keySet">

    <EditText
        android:layout_width="@dimen/myEditText_horizontal_margin"
        android:layout_height="@dimen/myEditText_vertical_margin"
        android:hint="@string/myEditText"
        android:id="@id/myEditText"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myButton1"
        android:id="@+id/myButton1"
        android:layout_alignBottom="@id/myEditText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="@dimen/myTextView_horizontal_margin"
        android:layout_height="@dimen/myTextView_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/myTextView"
        android:id="@+id/myTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myButton2"
        android:id="@+id/myButton2"
        android:layout_below="@+id/myTextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
