<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:rowCount="2"
    android:columnCount="26">


    <ScrollView
        android:layout_width="380dp"
        android:layout_height="420dp"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/logText"
            android:id="@+id/logText"
            android:textColor="#ffb769ff"
            android:textSize="8sp"  />

        </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearButton"
        android:id="@+id/clearButton"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" />


    <Button
        android:layout_width="@dimen/button_w_margin"
        android:layout_height="@dimen/button_h_margin"
        android:text="@string/saveButton"
        android:id="@+id/saveButton"
        android:layout_gravity="bottom"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp" />


</RelativeLayout>